- 04-10-04: Added item effects 202-205, see database.pas for documentation. [Darkhelmet]
- 04-10-04: Added removeEquipment Script command. [Darkhelmet]
- 04-09-04: Retranslated map load packet, trimmed some useless code/comments. [Colus]
- 04-09-04: Added standard UpdateLook function.  Standardized all view packets. [Colus]
- 04-09-04: Added EnableLowerClassDyes option (defaults to FALSE) [Colus]
- 04-08-04: Fixed Pathfinding changes broke self-targeting skills. [AlexKreuz]
- 04-08-04: Fixed Player spells can not be cast over walls anymore. [AlexKreuz]
- 04-08-04: Fixed Archer-Type monsters can attack over cliffs now. [AlexKreuz]
- 04-08-04: Fixed Archer-Type monsters can not attack over walls anymore. [AlexKreuz]
- 04-08-04: Serious Rewrite of Pathfinding. [AlexKreuz]
- 04-08-04: Fixed Unable to snipe over cliffs bug. [AlexKreuz]
- 04-08-04: Added Athena GM Commands - @heal. [AlexKreuz]
- 04-08-04: Added Athena GM Commands - @kami, @kamib. [AlexKreuz]
- 04-08-04: Added Athena GM Commands - @alive. [AlexKreuz]
- 04-08-04: Added Athena GM Commands - @kill. [AlexKreuz]
- 04-08-04: Added Athena GM Commands - @die. [AlexKreuz]
- 04-08-04: Added Athena GM Commands - @jobchange. [AlexKreuz]
- 04-08-04: Added Athena GM Commands - @hide. [AlexKreuz]
- 04-08-04: Added Athena GM Commands - @option. [AlexKreuz]
- 04-08-04: Added Athena GM Commands - @storage. [AlexKreuz]
- 04-08-04: Added Athena GM Commands - @speed. [AlexKreuz]
- 04-08-04: Added #glevel GM command for faster guild testing. [KyuubiKitsune]
- 04-07-04: Added Weiss.ini options to edit Colors and Fonts. [AlexKreuz]
- 04-07-04: Added Athena GM Commands - @who3. [AlexKreuz]
- 04-07-04: Added Athena GM Commands - @who2. [AlexKreuz]
- 04-07-04: Added Athena GM Commands - @who. [AlexKreuz]
- 04-07-04: Added Athena GM Commands - @jump. [AlexKreuz]
- 04-07-04: Added Athena GM Commands - @jumpto, @warpto. [AlexKreuz]
- 04-07-04: Added Athena GM Commands - @where. [AlexKreuz]